--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "motion": "^11.12.0",
+    "clsx": "^2.1.1",
+    "motion": "^11.18.2",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
     "split-type": "^0.3.4",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
