--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "minimal-single-page-portfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.6.1",
+    "sharp": "^0.33.5",
     "split-type": "^0.3.4",
     "tailwind-merge": "^2.6.0"
   },
